fixed spacing between social media icons

--- a/src/styles.css
+++ b/src/styles.css
@@ -21,6 +21,10 @@
     align-items: center
 }
 
+.icon {
+    padding-right: 1%;
+    padding-left: 1%;
+}
 .devpost {
     
     width: 150px
